name:                   th-extras
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Template Haskell
synopsis:               A grab bag of useful functions for use with Template Haskell
description:            A grab bag of useful functions for use with Template Haskell

tested-with:            GHC == 7.2.2

Library
  hs-source-dirs:       src
  exposed-modules:      Language.Haskell.TH.Extras
  build-depends:        base >= 3 && < 5,
                        syb,
                        template-haskell
